Стилизует подвал сайта для всех экранов
- Компонент company-phone переименован в link-icon для переиспользования
- Подвал сделан на гридах

--- a/source/index.html
+++ b/source/index.html
@@ -33,11 +33,11 @@
         </li>
       </ul>
     </nav>
-    <a class="company-phone main-header__company-phone" href="tel:+749978468446">
-      <svg class="company-phone__svg" width="30" height="30">
+    <a class="link-icon link-icon--phone main-header__link-icon" href="tel:+749978468446">
+      <svg class="link-icon__svg" width="30" height="30">
         <use xlink:href="img/sprite.svg#phone"></use>
       </svg>
-      <span class="company-phone__number">+7 (499) -784-684-46</span>
+      <span class="link-icon__text">+7 (499) -784-684-46</span>
     </a>
     <button class="menu-button main-header__menu-button">
       <svg class="menu-button__svg" width="30" height="30">
@@ -48,6 +48,54 @@
   </header>
   <main>
   </main>
+  <footer class="main-footer container">
+    <section class="main-footer__wrapper">
+      <h2 class="visually-hidden">Дополнительная информация о сайте</h2>
+      <div class="main-footer__cell main-footer__cell--next-trips">
+        <h3 class="main-footer__title">Следующие путешествия</h3>
+        <ul class="main-footer__list">
+          <li class="main-footer__list-item">Марсель</li>
+          <li class="main-footer__list-item">Ним</li>
+          <li class="main-footer__list-item">Монпелье</li>
+          <li class="main-footer__list-item">Барселона</li>
+          <li class="main-footer__list-item">Пальма</li>
+        </ul>
+        <ul class="main-footer__list">
+          <li class="main-footer__list-item">Сардиния</li>
+          <li class="main-footer__list-item">Палермо</li>
+          <li class="main-footer__list-item">Катания</li>
+          <li class="main-footer__list-item">Неаполь</li>
+          <li class="main-footer__list-item">Рим</li>
+        </ul>
+        <ul class="main-footer__list">
+          <li class="main-footer__list-item">Корс</li>
+          <li class="main-footer__list-item">Ницца</li>
+          <li class="main-footer__list-item">Монако</li>
+          <li class="main-footer__list-item">День-ле-Бен</li>
+          <li class="main-footer__list-item">Гренобль</li>
+        </ul>
+      </div>
+      <div class="main-footer__cell main-footer__cell--contacts">
+        <h3 class="main-footer__title">Наши контакты</h3>
+          <a class="link-icon link-icon--secondary link-icon--mail main-footer__link-icon" href="mailto:puteshestviemechta@gmail.ru">
+            <svg class="link-icon__svg" width="26" height="20">
+              <use xlink:href="img/sprite.svg#mail"></use>
+            </svg>
+            <span class="link-icon__text">puteshestviemechta@gmail.ru</span>
+          </a>
+          <a class="link-icon link-icon--secondary link-icon--phone" href="tel:+749978468446">
+            <svg class="link-icon__svg" width="30" height="30">
+              <use xlink:href="img/sprite.svg#phone"></use>
+            </svg>
+            <span class="link-icon__text">+7 (499) -784-684-46</span>
+          </a>
+      </div>
+      <div class="main-footer__cell main-footer__cell--corp-trips">
+        <h3 class="main-footer__title">Корпоративные путешествия</h3>
+        <p class="main-footer__paragraph">Также вы можете заказать индивидуальное путешествие под вашу компанию. Подобные туры очень сближают компанию, помогают поддерживать корпоративный дух, а также являются оличным времяпрепровождением</p>
+      </div>
+    </section>
+  </footer>
   <script src="js/script.js"></script>
 </body>
 
