Добавляет главный блок
- Исправляет отступы в шапке для pixel-perfect.
- Изменяет vieport до планшетных на 767px.
- Добавляет картинки для главного блока.
- Добавляет компонент "кнопка".

--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,19 @@
       </svg>
     </button>
   </header>
-  <main>
+  <main class="main">
+    <h1 class="visually-hidden">Главная страница</h1>
+    <section class="site-banner">
+      <div class="site-banner__wrapper container">
+        <h2 class="site-banner__title">Путешeствие по Европе</h2>
+        <p class="site-banner__text">В этом туре вы откроете для себя Европу в новом свете. Вас ждет: море, горы, а также потрясающая красота природы.</p>
+        <a class="button button--icon site-banner__button" href="#">Смотреть тур
+          <svg class="button__svg" width="14" height="14">
+            <use xlink:href="img/sprite.svg#arrow-secondary-down"></use>
+          </svg>
+        </a>
+      </div>
+    </section>
   </main>
   <footer class="main-footer container">
     <section class="main-footer__wrapper">
