Добавит блок с карточками стран
- Исправляет опечатку из-за которой не верно отображались стили на мобильном для главного блока.
- Линтит стили предыдущего коммита.
- Изменяет автоматизацию для генерирования webp.
- Для сетки карточек товара использует flex с gap.
На планшетных и мобильных эту опцию заменяет margin
для работы в iOS.

--- a/source/index.html
+++ b/source/index.html
@@ -51,12 +51,106 @@
     <section class="site-banner">
       <div class="site-banner__wrapper container">
         <h2 class="site-banner__title">Путешeствие по Европе</h2>
-        <p class="site-banner__text">В этом туре вы откроете для себя Европу в новом свете. Вас ждет: море, горы, а также потрясающая красота природы.</p>
+        <p class="site-banner__text">В этом туре вы откроете для себя Европу в новом свете. Вас ждет: море, горы, а
+          также потрясающая красота природы.</p>
         <a class="button button--icon site-banner__button" href="#">Смотреть тур
           <svg class="button__svg" width="14" height="14">
             <use xlink:href="img/sprite.svg#arrow-secondary-down"></use>
           </svg>
         </a>
+      </div>
+    </section>
+    <section class="places-to-visit">
+      <div class="container">
+        <h2 class="places-to-visit__title">Места посещения</h2>
+        <p class="places-to-visit__text">Вы можете выбрать полный тур или частичный, с посещением первых 3 мест</p>
+        <div class="places-to-visit__country-cards">
+          <a class="places-to-visit__link" href="#">
+            <div class="country-card">
+              <picture>
+                <source type="image/webp" media="(max-width: 1023px)"
+                  srcset="img/content/country-card-greece-tablet.webp 1x, img/content/country-card-greece-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/content/country-card-greece-desktop.webp 1x, img/content/country-card-greece-desktop@2x.webp 2x">
+                <source media="(max-width: 1023px)"
+                  srcset="img/content/country-card-greece-tablet.jpg 1x, img/content/country-card-greece-tablet@2x.jpg 2x">
+                <img class="country-card__img" src="img/content/country-card-greece-desktop.jpg"
+                  srcset="img/content/country-card-greece-desktop@2x.jpg 2x" width="350" height="430"
+                  alt="Вилла на скале на фоне гор" />
+              </picture>
+              <span class="country-card__title">Греция</span>
+              <button class="button button--transparent country-card__button">Смотреть подробнее</button>
+            </div>
+          </a>
+          <a class="places-to-visit__link" href="#">
+            <div class="country-card">
+              <picture>
+                <source type="image/webp" media="(max-width: 1023px)"
+                  srcset="img/content/country-card-albania-tablet.webp 1x, img/content/country-card-albania-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/content/country-card-albania-desktop.webp 1x, img/content/country-card-albania-desktop@2x.webp 2x">
+                <source media="(max-width: 1023px)"
+                  srcset="img/content/country-card-albania-tablet.jpg 1x, img/content/country-card-albania-tablet@2x.jpg 2x">
+                <img class="country-card__img" src="img/content/country-card-albania-desktop.jpg"
+                  srcset="img/content/country-card-albania-desktop@2x.jpg 2x" width="350" height="430"
+                  alt="Вид на пляж и лазурный берег сверху" />
+              </picture>
+              <span class="country-card__title">Албания</span>
+              <button class="button button--transparent country-card__button">Смотреть подробнее</button>
+            </div>
+          </a>
+          <a class="places-to-visit__link" href="#">
+            <div class="country-card">
+              <picture>
+                <source type="image/webp" media="(max-width: 1023px)"
+                  srcset="img/content/country-card-macedonia-tablet.webp 1x, img/content/country-card-macedonia-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/content/country-card-macedonia-desktop.webp 1x, img/content/country-card-macedonia-desktop@2x.webp 2x">
+                <source media="(max-width: 1023px)"
+                  srcset="img/content/country-card-macedonia-tablet.jpg 1x, img/content/country-card-macedonia-tablet@2x.jpg 2x">
+                <img class="country-card__img" src="img/content/country-card-macedonia-desktop.jpg"
+                  srcset="img/content/country-card-macedonia-desktop@2x.jpg 2x" width="350" height="430"
+                  alt="Церковь на фоне моря" />
+              </picture>
+              <span class="country-card__title">Македония</span>
+              <button class="button button--transparent country-card__button">Смотреть подробнее</button>
+            </div>
+          </a>
+          <a class="places-to-visit__link" href="#">
+            <div class="country-card">
+              <picture>
+                <source type="image/webp" media="(max-width: 1023px)"
+                  srcset="img/content/country-card-montenegro-tablet.webp 1x, img/content/country-card-montenegro-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/content/country-card-montenegro-desktop.webp 1x, img/content/country-card-montenegro-desktop@2x.webp 2x">
+                <source media="(max-width: 1023px)"
+                  srcset="img/content/country-card-montenegro-tablet.jpg 1x, img/content/country-card-montenegro-tablet@2x.jpg 2x">
+                <img class="country-card__img" src="img/content/country-card-montenegro-desktop.jpg"
+                  srcset="img/content/country-card-montenegro-desktop@2x.jpg 2x" width="350" height="430"
+                  alt="Вид сверху на лазурную реки и лес" />
+              </picture>
+              <span class="country-card__title">Черногория</span>
+              <button class="button button--transparent country-card__button">Смотреть подробнее</button>
+            </div>
+          </a>
+          <a class="places-to-visit__link" href="#">
+            <div class="country-card">
+              <picture>
+                <source type="image/webp" media="(max-width: 1023px)"
+                  srcset="img/content/country-card-croatia-tablet.webp 1x, img/content/country-card-croatia-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/content/country-card-croatia-desktop.webp 1x, img/content/country-card-croatia-desktop@2x.webp 2x">
+                <source media="(max-width: 1023px)"
+                  srcset="img/content/country-card-croatia-tablet.jpg 1x, img/content/country-card-croatia-tablet@2x.jpg 2x">
+                <img class="country-card__img" src="img/content/country-card-croatia-desktop.jpg"
+                  srcset="img/content/country-card-croatia-desktop@2x.jpg 2x" width="350" height="430"
+                  alt="Сталактиты в пещере" />
+              </picture>
+              <span class="country-card__title">Хорватия</span>
+              <button class="button button--transparent country-card__button">Смотреть подробнее</button>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
   </main>
@@ -89,22 +183,25 @@
       </div>
       <div class="main-footer__cell main-footer__cell--contacts">
         <h3 class="main-footer__title">Наши контакты</h3>
-          <a class="link-icon link-icon--secondary link-icon--mail main-footer__link-icon" href="mailto:puteshestviemechta@gmail.ru">
-            <svg class="link-icon__svg" width="26" height="20">
-              <use xlink:href="img/sprite.svg#mail"></use>
-            </svg>
-            <span class="link-icon__text">puteshestviemechta@gmail.ru</span>
-          </a>
-          <a class="link-icon link-icon--secondary link-icon--phone" href="tel:+749978468446">
-            <svg class="link-icon__svg" width="30" height="30">
-              <use xlink:href="img/sprite.svg#phone"></use>
-            </svg>
-            <span class="link-icon__text">+7 (499) -784-684-46</span>
-          </a>
+        <a class="link-icon link-icon--secondary link-icon--mail main-footer__link-icon"
+          href="mailto:puteshestviemechta@gmail.ru">
+          <svg class="link-icon__svg" width="26" height="20">
+            <use xlink:href="img/sprite.svg#mail"></use>
+          </svg>
+          <span class="link-icon__text">puteshestviemechta@gmail.ru</span>
+        </a>
+        <a class="link-icon link-icon--secondary link-icon--phone" href="tel:+749978468446">
+          <svg class="link-icon__svg" width="30" height="30">
+            <use xlink:href="img/sprite.svg#phone"></use>
+          </svg>
+          <span class="link-icon__text">+7 (499) -784-684-46</span>
+        </a>
       </div>
       <div class="main-footer__cell main-footer__cell--corp-trips">
         <h3 class="main-footer__title">Корпоративные путешествия</h3>
-        <p class="main-footer__paragraph">Также вы можете заказать индивидуальное путешествие под вашу компанию. Подобные туры очень сближают компанию, помогают поддерживать корпоративный дух, а также являются оличным времяпрепровождением</p>
+        <p class="main-footer__paragraph">Также вы можете заказать индивидуальное путешествие под вашу компанию.
+          Подобные туры очень сближают компанию, помогают поддерживать корпоративный дух, а также являются оличным
+          времяпрепровождением</p>
       </div>
     </section>
   </footer>
