--- a/source/index.html
+++ b/source/index.html
@@ -60,10 +60,9 @@
         </a>
       </div>
     </section>
-    <section class="places-to-visit">
-      <div class="container">
-        <h2 class="places-to-visit__title">Места посещения</h2>
-        <p class="places-to-visit__text">Вы можете выбрать полный тур или частичный, с посещением первых 3 мест</p>
+    <section class="places-to-visit container">
+        <h2 class="heading places-to-visit__heading">Места посещения</h2>
+        <p class="paragraph places-to-visit__paragraph">Вы можете выбрать полный тур или частичный, с посещением первых 3 мест</p>
         <div class="places-to-visit__country-cards">
           <a class="places-to-visit__link" href="#">
             <div class="country-card">
@@ -151,7 +150,6 @@
             </div>
           </a>
         </div>
-      </div>
     </section>
   </main>
   <footer class="main-footer container">
