Добавляет блок с табами стран
- Картинка стран сделана как контентное изображание.
- Добавляет горизонтальный скролл ниже десктопа.

--- a/source/index.html
+++ b/source/index.html
@@ -61,95 +61,170 @@
       </div>
     </section>
     <section class="places-to-visit container">
-        <h2 class="heading places-to-visit__heading">Места посещения</h2>
-        <p class="paragraph places-to-visit__paragraph">Вы можете выбрать полный тур или частичный, с посещением первых 3 мест</p>
-        <div class="places-to-visit__country-cards">
-          <a class="places-to-visit__link" href="#">
-            <div class="country-card">
-              <picture>
-                <source type="image/webp" media="(max-width: 1023px)"
-                  srcset="img/content/country-card-greece-tablet.webp 1x, img/content/country-card-greece-tablet@2x.webp 2x">
-                <source type="image/webp"
-                  srcset="img/content/country-card-greece-desktop.webp 1x, img/content/country-card-greece-desktop@2x.webp 2x">
-                <source media="(max-width: 1023px)"
-                  srcset="img/content/country-card-greece-tablet.jpg 1x, img/content/country-card-greece-tablet@2x.jpg 2x">
-                <img class="country-card__img" src="img/content/country-card-greece-desktop.jpg"
-                  srcset="img/content/country-card-greece-desktop@2x.jpg 2x" width="350" height="430"
-                  alt="Вилла на скале на фоне гор" />
-              </picture>
-              <span class="country-card__title">Греция</span>
-              <button class="button button--transparent country-card__button">Смотреть подробнее</button>
-            </div>
-          </a>
-          <a class="places-to-visit__link" href="#">
-            <div class="country-card">
-              <picture>
-                <source type="image/webp" media="(max-width: 1023px)"
-                  srcset="img/content/country-card-albania-tablet.webp 1x, img/content/country-card-albania-tablet@2x.webp 2x">
-                <source type="image/webp"
-                  srcset="img/content/country-card-albania-desktop.webp 1x, img/content/country-card-albania-desktop@2x.webp 2x">
-                <source media="(max-width: 1023px)"
-                  srcset="img/content/country-card-albania-tablet.jpg 1x, img/content/country-card-albania-tablet@2x.jpg 2x">
-                <img class="country-card__img" src="img/content/country-card-albania-desktop.jpg"
-                  srcset="img/content/country-card-albania-desktop@2x.jpg 2x" width="350" height="430"
-                  alt="Вид на пляж и лазурный берег сверху" />
-              </picture>
-              <span class="country-card__title">Албания</span>
-              <button class="button button--transparent country-card__button">Смотреть подробнее</button>
-            </div>
-          </a>
-          <a class="places-to-visit__link" href="#">
-            <div class="country-card">
-              <picture>
-                <source type="image/webp" media="(max-width: 1023px)"
-                  srcset="img/content/country-card-macedonia-tablet.webp 1x, img/content/country-card-macedonia-tablet@2x.webp 2x">
-                <source type="image/webp"
-                  srcset="img/content/country-card-macedonia-desktop.webp 1x, img/content/country-card-macedonia-desktop@2x.webp 2x">
-                <source media="(max-width: 1023px)"
-                  srcset="img/content/country-card-macedonia-tablet.jpg 1x, img/content/country-card-macedonia-tablet@2x.jpg 2x">
-                <img class="country-card__img" src="img/content/country-card-macedonia-desktop.jpg"
-                  srcset="img/content/country-card-macedonia-desktop@2x.jpg 2x" width="350" height="430"
-                  alt="Церковь на фоне моря" />
-              </picture>
-              <span class="country-card__title">Македония</span>
-              <button class="button button--transparent country-card__button">Смотреть подробнее</button>
-            </div>
-          </a>
-          <a class="places-to-visit__link" href="#">
-            <div class="country-card">
-              <picture>
-                <source type="image/webp" media="(max-width: 1023px)"
-                  srcset="img/content/country-card-montenegro-tablet.webp 1x, img/content/country-card-montenegro-tablet@2x.webp 2x">
-                <source type="image/webp"
-                  srcset="img/content/country-card-montenegro-desktop.webp 1x, img/content/country-card-montenegro-desktop@2x.webp 2x">
-                <source media="(max-width: 1023px)"
-                  srcset="img/content/country-card-montenegro-tablet.jpg 1x, img/content/country-card-montenegro-tablet@2x.jpg 2x">
-                <img class="country-card__img" src="img/content/country-card-montenegro-desktop.jpg"
-                  srcset="img/content/country-card-montenegro-desktop@2x.jpg 2x" width="350" height="430"
-                  alt="Вид сверху на лазурную реки и лес" />
-              </picture>
-              <span class="country-card__title">Черногория</span>
-              <button class="button button--transparent country-card__button">Смотреть подробнее</button>
-            </div>
-          </a>
-          <a class="places-to-visit__link" href="#">
-            <div class="country-card">
-              <picture>
-                <source type="image/webp" media="(max-width: 1023px)"
-                  srcset="img/content/country-card-croatia-tablet.webp 1x, img/content/country-card-croatia-tablet@2x.webp 2x">
-                <source type="image/webp"
-                  srcset="img/content/country-card-croatia-desktop.webp 1x, img/content/country-card-croatia-desktop@2x.webp 2x">
-                <source media="(max-width: 1023px)"
-                  srcset="img/content/country-card-croatia-tablet.jpg 1x, img/content/country-card-croatia-tablet@2x.jpg 2x">
-                <img class="country-card__img" src="img/content/country-card-croatia-desktop.jpg"
-                  srcset="img/content/country-card-croatia-desktop@2x.jpg 2x" width="350" height="430"
-                  alt="Сталактиты в пещере" />
-              </picture>
-              <span class="country-card__title">Хорватия</span>
-              <button class="button button--transparent country-card__button">Смотреть подробнее</button>
-            </div>
-          </a>
+      <h2 class="heading places-to-visit__heading">Места посещения</h2>
+      <p class="paragraph places-to-visit__paragraph">Вы можете выбрать полный тур или частичный, с посещением первых 3
+        мест</p>
+      <div class="places-to-visit__country-cards">
+        <a class="places-to-visit__link" href="#">
+          <div class="country-card">
+            <picture>
+              <source type="image/webp" media="(max-width: 1023px)"
+                srcset="img/content/country-card-greece-tablet.webp 1x, img/content/country-card-greece-tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="img/content/country-card-greece-desktop.webp 1x, img/content/country-card-greece-desktop@2x.webp 2x">
+              <source media="(max-width: 1023px)"
+                srcset="img/content/country-card-greece-tablet.jpg 1x, img/content/country-card-greece-tablet@2x.jpg 2x">
+              <img class="country-card__img" src="img/content/country-card-greece-desktop.jpg"
+                srcset="img/content/country-card-greece-desktop@2x.jpg 2x" width="350" height="430"
+                alt="Вилла на скале на фоне гор" />
+            </picture>
+            <span class="country-card__title">Греция</span>
+            <button class="button button--transparent country-card__button">Смотреть подробнее</button>
+          </div>
+        </a>
+        <a class="places-to-visit__link" href="#">
+          <div class="country-card">
+            <picture>
+              <source type="image/webp" media="(max-width: 1023px)"
+                srcset="img/content/country-card-albania-tablet.webp 1x, img/content/country-card-albania-tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="img/content/country-card-albania-desktop.webp 1x, img/content/country-card-albania-desktop@2x.webp 2x">
+              <source media="(max-width: 1023px)"
+                srcset="img/content/country-card-albania-tablet.jpg 1x, img/content/country-card-albania-tablet@2x.jpg 2x">
+              <img class="country-card__img" src="img/content/country-card-albania-desktop.jpg"
+                srcset="img/content/country-card-albania-desktop@2x.jpg 2x" width="350" height="430"
+                alt="Вид на пляж и лазурный берег сверху" />
+            </picture>
+            <span class="country-card__title">Албания</span>
+            <button class="button button--transparent country-card__button">Смотреть подробнее</button>
+          </div>
+        </a>
+        <a class="places-to-visit__link" href="#">
+          <div class="country-card">
+            <picture>
+              <source type="image/webp" media="(max-width: 1023px)"
+                srcset="img/content/country-card-macedonia-tablet.webp 1x, img/content/country-card-macedonia-tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="img/content/country-card-macedonia-desktop.webp 1x, img/content/country-card-macedonia-desktop@2x.webp 2x">
+              <source media="(max-width: 1023px)"
+                srcset="img/content/country-card-macedonia-tablet.jpg 1x, img/content/country-card-macedonia-tablet@2x.jpg 2x">
+              <img class="country-card__img" src="img/content/country-card-macedonia-desktop.jpg"
+                srcset="img/content/country-card-macedonia-desktop@2x.jpg 2x" width="350" height="430"
+                alt="Церковь на фоне моря" />
+            </picture>
+            <span class="country-card__title">Македония</span>
+            <button class="button button--transparent country-card__button">Смотреть подробнее</button>
+          </div>
+        </a>
+        <a class="places-to-visit__link" href="#">
+          <div class="country-card">
+            <picture>
+              <source type="image/webp" media="(max-width: 1023px)"
+                srcset="img/content/country-card-montenegro-tablet.webp 1x, img/content/country-card-montenegro-tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="img/content/country-card-montenegro-desktop.webp 1x, img/content/country-card-montenegro-desktop@2x.webp 2x">
+              <source media="(max-width: 1023px)"
+                srcset="img/content/country-card-montenegro-tablet.jpg 1x, img/content/country-card-montenegro-tablet@2x.jpg 2x">
+              <img class="country-card__img" src="img/content/country-card-montenegro-desktop.jpg"
+                srcset="img/content/country-card-montenegro-desktop@2x.jpg 2x" width="350" height="430"
+                alt="Вид сверху на лазурную реки и лес" />
+            </picture>
+            <span class="country-card__title">Черногория</span>
+            <button class="button button--transparent country-card__button">Смотреть подробнее</button>
+          </div>
+        </a>
+        <a class="places-to-visit__link" href="#">
+          <div class="country-card">
+            <picture>
+              <source type="image/webp" media="(max-width: 1023px)"
+                srcset="img/content/country-card-croatia-tablet.webp 1x, img/content/country-card-croatia-tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="img/content/country-card-croatia-desktop.webp 1x, img/content/country-card-croatia-desktop@2x.webp 2x">
+              <source media="(max-width: 1023px)"
+                srcset="img/content/country-card-croatia-tablet.jpg 1x, img/content/country-card-croatia-tablet@2x.jpg 2x">
+              <img class="country-card__img" src="img/content/country-card-croatia-desktop.jpg"
+                srcset="img/content/country-card-croatia-desktop@2x.jpg 2x" width="350" height="430"
+                alt="Сталактиты в пещере" />
+            </picture>
+            <span class="country-card__title">Хорватия</span>
+            <button class="button button--transparent country-card__button">Смотреть подробнее</button>
+          </div>
+        </a>
+      </div>
+    </section>
+    <section class="countries">
+      <div class="tabs">
+        <div class="container tabs__container">
+          <div class="tabs__list" role="tablist" aria-label="Список стран">
+            <button class="tabs__tab tabs__tab--selected" role="tab" aria-selected="true" aria-controls="panel-1"
+              id="tab-1" tabindex="0">
+              Греция
+            </button>
+            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-2" id="tab-2" tabindex="-1">
+              Албания
+            </button>
+            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-3" id="tab-3" tabindex="-1">
+              Македония
+            </button>
+            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-4" id="tab-4" tabindex="-1">
+              Черногория
+            </button>
+            <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="panel-5" id="tab-5" tabindex="-1">
+              Хорватия
+            </button>
+          </div>
         </div>
+        <div class="country container country__container tabs__tabpanel tabs__tabpanel--active tabs__tabpanel--greece"
+          id="panel-1" role="tabpanel" tabindex="0" aria-labelledby="tab-1">
+          <div class="country__content">
+            <h3 class="heading country__heading">Греция</h3>
+            <p class="paragraph country__paragraph">
+              На севере Греции находится один из крупнейших комплексов монастырей, расположенных на вершинах скал.
+              Название его «Метеора» буквально переводится как «висящие в воздухе». Этот монастырь основная цель
+              нашего
+              путешествия в Греции. После покарения скал из песчанника и обломочной горной породы, достигающих в
+              высоту
+              600 метров, наградой будет неописуемая красота природы и атмосфера, царящая в монастырях Метеоры.
+            </p>
+            <a class="button country__button" href="#">Купить тур сейчас</a>
+          </div>
+          <div class="feedback country__feedback">
+            <h3 class="heading heading--small feedback__heading">Отзывы</h3>
+            <blockquote class="feedback__blockquote">
+              <p class="paragraph paragraph--small feedback__paragraph">Метеоры в Греции можно сравнить разве что с
+                Монсерратт в Испании. Такие же высоченные скалы. Но здесь
+                потрясает масштаб. Огромная территория, высоко в горах. Ощущение такое, как будто стоишь на краю
+                света!
+              </p>
+              <div class="feedback__author">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/content/users/feedback-vlada.webp 1x, img/content/users/feedback-vlada@2x.webp 2x">
+                  <img class="feedback__author-img" src="img/content/users/feedback-vlada.jpg"
+                    srcset="img/content/users/feedback-vlada@2x.jpg 2x" width="38" height="38"
+                    alt="Аватар Влады Голицыной">
+                </picture>
+                <span class="feedback__author-name">Влада Голицына</span>
+              </div>
+            </blockquote>
+          </div>
+          <picture>
+            <source type="image/webp" media="(max-width: 767px)"
+              srcset="img/content/countries/country-greece-mobile@2x.webp 1x, img/content/countries/country-greece-mobile@2x.webp 2x">
+            <source type="image/webp" media="(max-width: 1023px)"
+              srcset="img/content/countries/country-greece-tablet@2x.webp 1x, img/content/countries/country-greece-tablet@2x.webp 2x">
+            <source type="image/webp"
+              srcset="img/content/countries/country-greece-desktop@2x.webp 1x, img/content/countries/country-greece-desktop@2x.webp 2x">
+            <source media="(max-width: 767px)"
+              srcset="img/content/countries/country-greece-mobile@2x.jpg 1x, img/content/countries/country-greece-mobile@2x.jpg 2x">
+            <source media="(max-width: 1023px)"
+              srcset="img/content/countries/country-greece-tablet@2x.jpg 1x, img/content/countries/country-greece-tablet@2x.jpg 2x">
+            <img class="country__img" src="img/content/countries/country-greece-desktop.jpg"
+              srcset="img/content/countries/country-greece-desktop@2x.jpg 2x" width="430" height="596"
+              alt="Монастырь в Греции на вершине скалы Метеора" />
+          </picture>
+        </div>
+      </div>
     </section>
   </main>
   <footer class="main-footer container">
